--- a/aboutMe_page.html
+++ b/aboutMe_page.html
@@ -11,7 +11,7 @@
 <div class="container">
 <nav class="sideNav">
 	<ul>
-		<li class="navBar"><strong><a href="mainPage.html">Home</a></strong></li>
+		<li class="navBar"><strong><a href="index.html">Home</a></strong></li>
 		<li class="navBar"><strong><a href="aboutMe_page.html">About Me</a></strong></li>
 		<li class="navBar"><a href="experiencePage.html">Experience</a></li>
 		<li class="navBar"><a href="contactPage.html">Contact Me</a></li>
