--- a/contactPage.html
+++ b/contactPage.html
@@ -13,7 +13,7 @@
 <body>
 <nav class="sideNav">
 	<ul>
-		<li class="navBar"><strong><a href="mainPage.html">Home</a></strong></li>
+		<li class="navBar"><strong><a href="index.html">Home</a></strong></li>
 		<li class="navBar"><strong><a href="aboutMe_page.html">About Me</a></strong></li>
 		<li class="navBar"><a href="experiencePage.html">Experience</a></li>
 		<li class="navBar"><a href="contactPage.html">Contact Me</a></li>
@@ -30,7 +30,7 @@
 <div id="formBackground">
 	<div id="formSubmit">
 		<!-- Textfield with Floating Label -->
-	  <form action="http://formspree.io/head.margaret02@gmail.com" method:"POST">
+	  <form action="http://formspree.io/head.margaret02@gmail.com" method="POST">
 	  	<input type="hidden" name="_next" value="thankYou_page.html"/>
 	      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 	        <input class="mdl-textfield__input" type="text" id="sample3">
