--- a/experiencePage.html
+++ b/experiencePage.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="sideNav">
 	<ul>
-		<li class="navBar"><strong><a href="mainPage.html">Home</a></strong></li>
+		<li class="navBar"><strong><a href="index.html">Home</a></strong></li>
 		<li class="navBar"><strong><a href="aboutMe_page.html">About Me</a></strong></li>
 		<li class="navBar"><a href="experiencePage.html">Experience</a></li>
 		<li class="navBar"><a href="contactPage.html">Contact Me</a></li>
@@ -116,7 +116,7 @@
 		</div>
 	</footer>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
 <script src="assets/viewportchecker.js"></script> 
 <script type="text/javascript">
 jQuery(document).ready(function() {
