--- a/aboutMe_page.html
+++ b/aboutMe_page.html
@@ -117,7 +117,7 @@
 <br>
 <br>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
 <script src="assets/viewportchecker.js"></script> 
 <script type="text/javascript">
 jQuery(document).ready(function() {
