--- a/mainPage.html
+++ b/mainPage.html
@@ -10,7 +10,7 @@
 <body>
 	<nav class="sideNav">
 		<ul>
-			<li class="navBar"><strong><a href="mainPage.html">Home</a></strong></li>
+			<li class="navBar"><strong><a href="index.html">Home</a></strong></li>
 			<li class="navBar"><strong><a href="aboutMe_page.html">About Me</a></strong></li>
 			<li class="navBar"><a href="experiencePage.html">Experience</a></li>
 			<li class="navBar"><a href="contactPage.html">Contact Me</a></li>
