--- a/contactPage.html
+++ b/contactPage.html
@@ -31,7 +31,7 @@
 	<div id="formSubmit">
 		<!-- Textfield with Floating Label -->
 	  <form action="https://formspree.io/head.margaret02@gmail.com" method="POST">
-	  	<input type="hidden" name="_next" value="thankYou_page.html"/>
+	  	<input type="hidden" name="_next" value="https://mhead02.github.io/Final-Portfolio/thankYou_page.html"/>
 	      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 	        <input class="mdl-textfield__input" type="text" id="sample3">
 	        <label class="mdl-textfield__label" for="sample3">Name</label>
